feat: student agreement form

--- a/prime_admin/templates/lms/client_view_modal.html
+++ b/prime_admin/templates/lms/client_view_modal.html
@@ -94,6 +94,26 @@
                                 <input style="font-weight: bold;" disabled type="text" class="form-control" id="view_password" name="view_password"
                                     value="">
                             </div>
+                            <div class="col-md-3 mb-3">
+                                <label for="view_civil_status">Civil Status</label>
+                                <select disabled name="view_civil_status" id="view_civil_status" class="form-control" required>
+                                    <option value="">Choose...</option>
+                                    <option value="Single">Single</option>
+                                    <option value="Married">Married</option>
+                                    <option value="Widowed">Widowed</option>
+                                    <option value="Divorced">Divorced</option>
+                                </select>
+                            </div>
+                            <div class="col-md-3 mb-3">
+                                <label for="view_gender">Gender</label>
+                                <select disabled name="view_gender" id="view_gender" class="form-control" required>
+                                    <option value="">Choose...</option>
+                                    <option value="Male">Male</option>
+                                    <option value="Female">Female</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-row">
                             <div class="col-md-6 mb-3">
                                 <label for="view_address">Address</label>
                                 <input style="font-weight: bold;" disabled type="text" class="form-control" id="view_address" name="view_address"
@@ -171,6 +191,7 @@
                 <button id="btn_refund" type="button" class="btn btn-danger">Refund</button>
                 {% endif %}
                 <button id="btn_print_student_info" type="button" class="btn btn-info">Print Student Information</button>
+                <button id="btn_print_agreement_form" type="button" class="btn btn-info">Print Agreement Form</button>
                 {% if current_user.role.name in ['Secretary', 'Admin', 'Partner'] %}
                 <button id="btn_edit" type="button" class="btn btn-primary">Edit</button>
                 {% endif %}
