--- a/prime_admin/templates/lms/registration.html
+++ b/prime_admin/templates/lms/registration.html
@@ -394,6 +394,40 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-2">
+                        <div class="position-relative form-group">
+                            <label for="civil_status" class="">Civil Status</label>
+                            <select name="civil_status" id="civil_status" class="form-control" required>
+                                <option value="">Choose...</option>
+                                <option value="Single">Single</option>
+                                <option value="Married">Married</option>
+                                <option value="Widowed">Widowed</option>
+                                <option value="Divorced">Divorced</option>
+                            </select>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please provide a civil status
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-1">
+                        <div class="position-relative form-group">
+                            <label for="gender" class="">Gender</label>
+                            <select name="gender" id="gender" class="form-control" required>
+                                <option value="">Choose...</option>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
+                            </select>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please provide a schedule
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-md-3">
                         <div class="position-relative form-group">
                             <label for="passport" class="">Passport</label>
@@ -418,6 +452,8 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="form-row">
                     <div class="col-md-3">
                         <div class="position-relative form-group">
                             <label for="email" class="">Email Address</label>
@@ -430,9 +466,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="form-row">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="position-relative form-group">
                             <label for="e_registration" class="">E-Registration</label>
                             <input name="e_registration" id="e_registration" type="text" class="form-control">
@@ -444,7 +478,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-6">
                         <div class="position-relative form-group">
                             <label for="address" class="">Address</label>
                             <input name="address" id="address" type="text" class="form-control">
@@ -521,7 +555,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="position-relative form-group">
                             <label for="contact_person" class="">Contact Person</label>
                             <select disabled name="contact_person" id="contact_person" class="form-control" required>
@@ -537,6 +571,22 @@
                             </div>
                             <div class="invalid-feedback">
                                 Please provide a contact person
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-1">
+                        <div class="position-relative form-group">
+                            <label for="session" class="">Session</label>
+                            <select name="session" id="session" class="form-control" required>
+                                <option value="">Choose...</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                            </select>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please provide a session
                             </div>
                         </div>
                     </div>
