update: registration number

--- a/prime_admin/templates/lms/student_agreement_form_pdf.html
+++ b/prime_admin/templates/lms/student_agreement_form_pdf.html
@@ -96,7 +96,7 @@
 	</div>
 
 	<div style="text-align: left; margin-top:40px;">
-		<h3 style="font-weight:bold;margin:0%; font-size:12px;">PSRN: {{student.full_registration_number}}</h3>
+		<h3 style="font-weight:bold;margin:0%; font-size:12px;">REGISTRATION NUMBER: SN{{student.full_registration_number}}</h3>
 	</div>
 
 	<div style="text-align: left; margin-top:10px; font-size: 12px;" class="Row">
