feat: sequence no and president signature

--- a/prime_admin/templates/lms/student_agreement_form_pdf.html
+++ b/prime_admin/templates/lms/student_agreement_form_pdf.html
@@ -30,6 +30,7 @@
 			margin-right: 1cm;
 			margin-left: 1cm;
 			margin-top: .5cm;
+			margin-bottom: 0cm;
 		}
 
 		.Row {
@@ -146,10 +147,19 @@
 		DocuSigned by:
 	</div>	
 
-	<div style="text-align: right; margin-right: 50px; font-size: 12px; margin-top:0px;">
+	<div style="text-align: right; margin-right: 50px; font-size: 12px; margin-top:0px; margin-bottom: 0px;">
 		<div style="margin-left: 60%;" class="line"></div>
 		SIGNATURE OVER PRINTED NAME
+	</div>
+
+	<div style="text-align: left; font-size: 15px; margin-top:0px;">
+		<div style="margin-left: 12%;">JONWEL S. SUPRESENCIA</div>
+		<div style="margin-left: 20px; height: 0px;" class="line"></div>
+		<div style="margin-left: 20%; font-size: 13px;">PRESIDENT</div>
+	</div>
+
+	<div style="text-align: left; font-size: 10px; margin-top: 50px;">
+		{{sequence_no}}
 	</div>	
 </body>
-
 </html>
