--- a/prime_admin/templates/lms/student_agreement_form_pdf.html
+++ b/prime_admin/templates/lms/student_agreement_form_pdf.html
@@ -152,13 +152,17 @@
 		SIGNATURE OVER PRINTED NAME
 	</div>
 
-	<div style="text-align: left; font-size: 15px; margin-top:0px;">
+	<div style="text-align: left; margin-top:0px; margin-bottom:0px; position:absolute; bottom: 5%">
+		<img src="{{url_for('lms.static', filename='img/full_signature.png')}}" alt="logo" width="15%" height="15%">
+	</div>
+
+	<!-- <div style="text-align: left; font-size: 15px; margin-top:0px;">
 		<div style="margin-left: 12%;">JONWEL S. SUPRESENCIA</div>
 		<div style="margin-left: 20px; height: 0px;" class="line"></div>
 		<div style="margin-left: 20%; font-size: 13px;">PRESIDENT</div>
-	</div>
+	</div> -->
 
-	<div style="text-align: left; font-size: 10px; margin-top: 50px;">
+	<div style="text-align: left; font-size: 10px; margin-top: 100px; bottom: 0%">
 		{{sequence_no}}
 	</div>	
 </body>
