--- a/prime_admin/templates/lms/student_agreement_form_pdf.html
+++ b/prime_admin/templates/lms/student_agreement_form_pdf.html
@@ -67,6 +67,31 @@
 			right: 0px;
 		}
 
+		#div_full_signature{
+			height: 100px;
+			left: 0px;
+			right: 0px;
+			align-items: left;
+			text-align: left;
+			margin-bottom: 0px;
+			position: relative;
+			bottom: 6%
+		}
+
+		#img_full_signature {
+			width: 30%;
+			height: auto;
+			top: 40px;
+			left: 40px;
+			right: 0px;
+			margin-bottom: 0px;
+		}
+
+		#div_sequence_no {
+			position: absolute;
+			top: 150px;
+		}
+		
 		li {
 			list-style: lower-alpha;
 			margin: 0px;
@@ -152,8 +177,12 @@
 		SIGNATURE OVER PRINTED NAME
 	</div>
 
-	<div style="text-align: left; margin-top:0px; margin-bottom:0px; position:absolute; bottom: 5%">
-		<img src="{{url_for('lms.static', filename='img/full_signature.png')}}" alt="logo" width="15%" height="15%">
+	<div id="div_full_signature" style="text-align: left; margin-top:0px; margin-bottom:0px;">
+		<img id="img_full_signature" src="{{url_for('lms.static', filename='img/full_signature.jpg')}}" alt="logo" width="10%;" height="10%;">
+
+		<div id="div_sequence_no" style="text-align: left; font-size: 10px;">
+			{{sequence_no}}
+		</div>
 	</div>
 
 	<!-- <div style="text-align: left; font-size: 15px; margin-top:0px;">
@@ -161,9 +190,5 @@
 		<div style="margin-left: 20px; height: 0px;" class="line"></div>
 		<div style="margin-left: 20%; font-size: 13px;">PRESIDENT</div>
 	</div> -->
-
-	<div style="text-align: left; font-size: 10px; margin-top: 100px; bottom: 0%">
-		{{sequence_no}}
-	</div>	
 </body>
 </html>
