--- a/prime_admin/templates/lms/client_view_modal.html
+++ b/prime_admin/templates/lms/client_view_modal.html
@@ -193,13 +193,15 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 {% if current_user.role.name in ['Secretary', 'Admin', 'Partner'] %}
-                <button id="btn_refund" type="button" class="btn btn-danger">Refund</button>
+                    <button id="btn_refund" type="button" class="btn btn-danger">Refund</button>
                 {% endif %}
-                <button id="btn_show_certificate_modal" data-toggle="modal" data-target="#mdlPrintCertificate" type="button" class="btn btn-info">Print Certificate</button>
+                {% if current_user.role.name in ['Admin'] %}
+                    <button id="btn_show_certificate_modal" data-toggle="modal" data-target="#mdlPrintCertificate" type="button" class="btn btn-info">Print Certificate</button>
+                {% endif %}
                 <button id="btn_print_student_info" type="button" class="btn btn-info">Print Student Information</button>
                 <button id="btn_print_agreement_form" type="button" class="btn btn-info">Print Agreement Form</button>
                 {% if current_user.role.name in ['Secretary', 'Admin', 'Partner'] %}
-                <button id="btn_edit" type="button" class="btn btn-primary">Edit</button>
+                    <button id="btn_edit" type="button" class="btn btn-primary">Edit</button>
                 {% endif %}
             </div>
         </div>
