update: add additional other expenses items

--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -429,6 +429,7 @@
                 $("#description").append($('<option></option>').attr("value", "DIVIDER").text("DIVIDER"));
                 $("#description").append($('<option></option>').attr("value", "SNPL PASSPORT FEE").text("SNPL PASSPORT FEE"));
                 $("#description").append($('<option></option>').attr("value", "SNPL EPS-TOPIK TEST FEE").text("SNPL EPS-TOPIK TEST FEE"));
+                $("#description").append($('<option></option>').attr("value", "MALETA").text("MALETA"));
             }
         });
 
